syntax = "proto3";

package GrpcPtzControl;

service PtzControl {
  // Sends a greeting
  rpc PtzDirect (PtzDirectRequest) returns (PtzDirectReply) {}
}

// The request message.
message PtzDirectRequest {
	PtzXYZ xyz = 1;
	int32 speed = 2;
	string deviceid = 3;
}

// The response message.
message PtzDirectReply {
  string message = 1;
}

message PtzXYZ {
	int32 X = 1;
	int32 Y = 2;
	int32 Z = 3;
}